@@ -41,7 +41,6 @@ class PeriodClock;
 enum ModalResult {
   mrOK = 2,
   mrCancel = 3,
-  mrChangeLayout = 4,
 };
 
 /**
@@ -234,9 +233,8 @@ public:
   }
 
   /**
-   * Reposition window, if possible, or fail with mrChangeLayout in case
-   * there is not enough space. Will be called whenever the parent window
-   * changes.
+   * Reposition window, if possible.  Will be called whenever the
+   * parent window changes.
    *
    * @param parent_rc the parent's client rect
    */
